# unit_testing_principles

./: .editorconfig  README.md
code/: .gitignore  Book.sln  Book.sln.DotSettings  ReadMe.txt
code++/: CMakeLists.txt
code++/Book/: CMakeLists.txt
code++/Book/Chapter10/EF/: EF.cs
code++/Book/Chapter11/CodePollution/: CodePollution.cs
code++/Book/Chapter11/LeakingKnowledge/: LeakingKnowledge.cs
code++/Book/Chapter11/MockingClasses/: MockingClasses.cs
code++/Book/Chapter11/PrivateMethods/: PrivateMethods.cs
code++/Book/Chapter11/Time/: Ambient.cs
code++/Book/Chapter2/: CMakeLists.txt
code++/Book/Chapter2/Listing1/: CMakeLists.txt  CustomerTests.cpp  Other.cpp  Other.h
code++/Book/Chapter2/Listing2/: CMakeLists.txt  CustomerTests.cpp  CustomerTests.cs  Other.cpp  Other.cs  Other.h
code++/Book/Chapter3/CustomerTests_3/: CustomerTests.cs
code++/Book/Chapter3/CustomerTests_4/: CustomerTests.cs
code++/Book/Chapter3/FluentAssertions_1/: CalculatorTests.cs
code++/Book/Chapter3/Listing1/: CalculatorTests.cs
code++/Book/Chapter4/Listing1/: MessageRendererTests.cs
code++/Book/Chapter5/Listing1/: Listing1.cs
code++/Book/Chapter5/Listing5/: Listing5.cs
code++/Book/Chapter6/Listing1/: PriceEngine.cs
code++/Book/Chapter6/Listing2/: PriceEngine.cs
code++/Book/Chapter6/Listing7_/Before/: ArchitectureBefore.cs
code++/Book/Chapter6/Listing7_/Functional/: ArchitectureFunctional.cs
code++/Book/Chapter7/CanExecute/: CanExecute.cs
code++/Book/Chapter7/DomainEvents/: DomainEvents.cs
code++/Book/Chapter7/Refactored_2/: Refactored_2.cs
code++/Book/Chapter7/SampleProject/: SampleProject.cs
code++/Book/Chapter8/Circular/: Circular.cs
code++/Book/Chapter8/Logging/: V1.cs
code++/Book/Chapter8/LoggingV2/: LoggingV2.cs
code++/Book/Chapter8/Version1/: V1.cs
code++/Book/Chapter9/V2/: V2.cs
code++/Unsorted/: CMakeLists.txt  tiny_test.cpp
code/Book/: Book.csproj
code/Book/Chapter10/Migrations/: Migrations.cs
code/Book/Chapter10/Transaction/: Transaction.cs
code/Book/Chapter10/V1/: V1.cs
code/Book/Chapter11/PrivateState/: PrivateState.cs
code/Book/Chapter11/Time/: DI.cs
code/Book/Chapter2/Listing1/: CustomerTests.cs  Other.cs
code/Book/Chapter3/Listing6/: DeliveryServiceTests.cs
(+9 files in other folders)
